# search-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  00a_train_data.py  01a_train_token.py  01b_train_skipgram.py  02_train_2tower.py  02_train_two-towers.py  02_train_twotowers.py  03_setup_chromadb.py  BRIEF.md  Dockerfile  Gensim_sim.py  README.md  app.py  baseline_validation.py  code_tests.py  create_db.py  docker-compose.yml  download_wandb_models.py  environment.yml  environment_old.yml  evaluate_search.py  explore.ipynb  gensimm.py  gpu.py  inference.py  list_wandb_artifacts.py  main.py  requ.txt  requirements.txt  search_example.py  test.py  test_gpu.py  train_word2vec.py  upload_to_wandb.py
api/: 00_prep_data.py  00_train_data.py  01a_prep_token.py  01b_train_skipgram.py  03_setup_chromadb.py  04_calculate_accuracy.py  04_setup_chromadb.py  Dockerfile  app.py  entrypoint.sh  entrypoint.sh   requirements.txt  search_cli.py
data/: ms_marco.py
engine/: pyproject.toml
engine/data/: __init__.py  ms_marco.py
engine/model/: __init__.py  encoder.py  loss.py  mlp.py
engine/text/: __init__.py  gensim_w2v.py  setup.py  tokeniser.py  word2vec.py
engine/utils/: __init__.py  utils.py
model/: __init__.py  loss.py
scripts/: test_embeddings.py  train_word2vec.py
src/: __init__.py  app.py  config.py  data_preparation  data_preparation.py  database.py  dataset.py  evaluate.py  inference.py  main.py  model.py  training.py  validation_accuracy.py
utils/: helpers.py
web-app/: Dockerfile  search_engine.py
whole_two_tower/: BTT_again.py  Gensim_sim.py  (+10 more)
(+21 files in other folders)
