[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "engine"
version = "0.1.0"
authors = [
    { name="Your Name", email="kwokkenton@gmail.com" },
]
description = "Search engine implementation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.dependencies]
torch = "^2.0.0"
numpy = "^1.24.0"
transformers = "^4.30.0"
datasets = "^2.12.0"

[tool.setuptools]
packages = ["engine"]

[tool.setuptools.package-dir]
engine = "."

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
